# qorm

./: .gitignore  CMakeLists.txt  README.md  qorm-test.pro  qorm.pri  qorm.pro  version_1_0_0.txt
examples/: demo_crud.h  demo_select.h
examples/crud/: demo.pro  main.cpp  personController.cpp  personController.h  personModel.h  settings.json
includes/: QOrm
src/: qorm.h  qorm_connection_manager.cpp  qorm_connection_manager.h  qorm_connection_notify.cpp  qorm_connection_notify.h  qorm_connection_pool.cpp  qorm_connection_pool.h  qorm_connection_scoped.cpp  qorm_connection_scoped.h  qorm_connection_setting.cpp  qorm_connection_setting.h  qorm_const.h  qorm_controller.cpp  qorm_controller.h  qorm_dao.cpp  qorm_dao.h  qorm_endpoint.cpp  qorm_endpoint.h  qorm_endpoints.cpp  qorm_endpoints.h  qorm_global.h  qorm_log.cpp  qorm_log.h  qorm_macro.h  qorm_model.cpp  qorm_model.h  qorm_model_action_collection.cpp  qorm_model_action_collection.h  qorm_model_action_descriptor.cpp  qorm_model_action_descriptor.h  qorm_model_consts.h  qorm_model_costs.h  qorm_model_crud.h  qorm_model_crud_block.cpp  qorm_model_crud_block.h  qorm_model_crud_request.cpp  qorm_model_crud_request.h  qorm_model_crud_types.h  qorm_model_dao.h  qorm_model_descriptor.cpp  (+50 more)
src/private/: p_qorm_connection_manager.cpp  p_qorm_connection_manager.h  p_qorm_connection_notify.cpp  p_qorm_connection_notify.h  p_qorm_connection_notify_subscribe.cpp  p_qorm_connection_notify_subscribe.h  p_qorm_const.cpp  p_qorm_const.h  p_qorm_model_action_method.cpp  p_qorm_model_action_method.h  p_qorm_model_controls.cpp  p_qorm_model_controls.h  p_qorm_model_crud.cpp  p_qorm_model_crud.h  p_qorm_model_crud_body.cpp  p_qorm_model_crud_body.h  p_qorm_model_dao.cpp  p_qorm_model_dao.h  p_qorm_model_dto_crud.h  p_qorm_model_dto_design.cpp  p_qorm_model_dto_design.h  p_qorm_model_dto_endpoint.cpp  p_qorm_model_dto_endpoint.h  p_qorm_model_dto_endpoints.cpp  p_qorm_model_dto_endpoints.h  p_qorm_model_dto_filter.h  p_qorm_model_dto_header.h  p_qorm_model_dto_host.cpp  p_qorm_model_dto_host.h  p_qorm_model_dto_items.h  p_qorm_model_dto_link.h  p_qorm_model_dto_link_base.cpp  p_qorm_model_dto_link_base.h  p_qorm_model_dto_types.h  p_qorm_model_info.cpp  p_qorm_model_info.h  p_qorm_model_report.cpp  p_qorm_model_report.h  p_qorm_model_report_body.cpp  p_qorm_model_report_body.h  (+38 more)
test/: qorm-test.pri  qorm_test.cpp  qorm_test.h  qorm_test_main.cpp  qorm_test_main.h  qorm_test_unit.h  qorm_unit_test_connection_notify.cpp  qorm_unit_test_crud.cpp  qorm_unit_test_dto.cpp  qorm_unit_test_dto.h  qorm_unit_test_model.cpp  qorm_unit_test_object.cpp
